--- a/src/main/filters/filter-lwxdb.properties
+++ b/src/main/filters/filter-lwxdb.properties
@@ -1,63 +1,63 @@
-#存储api地址
+#\u5b58\u50a8api\u5730\u5740
 esp_store_url=http://esp-store.debug.web.nd
 version=v0.2
 
-#智能出题 访问地址
+#\u667a\u80fd\u51fa\u9898 \u8bbf\u95ee\u5730\u5740
 intelli.uri=http://intelli-knowledge.dev.web.nd/
 
-#课件编辑器 访问地址
+#\u8bfe\u4ef6\u7f16\u8f91\u5668 \u8bbf\u95ee\u5730\u5740
 slides.uri=http://esp-slides.debug.web.nd/
 
-#waf uc相关配置 
+#waf uc\u76f8\u5173\u914d\u7f6e 
 waf.uc.uri=https://ucbetapi.101.com/v0.93/
-#门户对应的组织
+#\u95e8\u6237\u5bf9\u5e94\u7684\u7ec4\u7ec7
 filter.uc.org=org_esp_dev
-#访问UC服务的用户名
+#\u8bbf\u95eeUC\u670d\u52a1\u7684\u7528\u6237\u540d
 waf.client.bearerToken.account.username=waf_loginer
-#访问UC服务的密码
+#\u8bbf\u95eeUC\u670d\u52a1\u7684\u5bc6\u7801
 waf.client.bearerToken.account.password=80fba977d063a6f7262a8a9c95f61140
 
-#访问CS的地址
+#\u8bbf\u95eeCS\u7684\u5730\u5740
 sdp_cs_api=http://betacs.101.com/v0.1
-#访问CS的service_id
+#\u8bbf\u95eeCS\u7684service_id
 sdp_cs_service_id=b1b8762a-7d5e-48ca-ba3f-1e065e90a9cb
 
 
 sdp_cs_file_path=/qa_content_edu/esp
 
 icplayer_download_url=/qa_content_edu/icplayer/latest/icplayer.zip
-# cs session 默认path
+# cs session \u9ed8\u8ba4path
 sdp_cs_file_session_path=/qa_content_edu
 
-# ref-path-addon addon默认path
+# ref-path-addon addon\u9ed8\u8ba4path
 sdp_cs_file_path_addon=/preproduction_content_module_mng/test
 
-# 默认cs打包实例
+# \u9ed8\u8ba4cs\u6253\u5305\u5b9e\u4f8b
 sdp_cs_default_instance=${ref-path}/qa_content_edu
 
-# 打包可能用到的另外一个实例,也被公私有库使用。
+# \u6253\u5305\u53ef\u80fd\u7528\u5230\u7684\u53e6\u5916\u4e00\u4e2a\u5b9e\u4f8b,\u4e5f\u88ab\u516c\u79c1\u6709\u5e93\u4f7f\u7528\u3002
 sdp_cs_default_instance_other=${ref-path}/qa_content_edu_product
 
-# 打包module实例
+# \u6253\u5305module\u5b9e\u4f8b
 sdp_cs_module_instance=${ref-path-addon}/preproduction_content_module_mng
 
-# 以下四组配置一一对应
-# cs打包实例配置key
+# \u4ee5\u4e0b\u56db\u7ec4\u914d\u7f6e\u4e00\u4e00\u5bf9\u5e94
+# cs\u6253\u5305\u5b9e\u4f8b\u914d\u7f6ekey
 sdp_cs_ref_key=${ref-path}/qa_content_edu,${ref-path}/qa_content_edu_product,${ref-path-addon}/preproduction_content_module_mng,${icplayer}
-# cs打包实例对应URL地址
+# cs\u6253\u5305\u5b9e\u4f8b\u5bf9\u5e94URL\u5730\u5740
 sdp_cs_ref_url=http://betacs.101.com/v0.1,http://betacs.101.com/v0.1,http://betacs.101.com/v0.1,http://betacs.101.com/v0.1
-# cs打包实例对应存储path
+# cs\u6253\u5305\u5b9e\u4f8b\u5bf9\u5e94\u5b58\u50a8path
 sdp_cs_ref_file_path=/qa_content_edu/esp,/qa_content_edu_product/esp,/preproduction_content_module_mng/test,/qa_content_edu/icplayer/latest
-# cs打包实例对应service id
+# cs\u6253\u5305\u5b9e\u4f8b\u5bf9\u5e94service id
 sdp_cs_ref_service_id=b1b8762a-7d5e-48ca-ba3f-1e065e90a9cb,f1514936-94cd-421e-93bf-2b1a96e64a6a,40afb964-78c0-4be9-b929-3f6f909c3ecf,b1b8762a-7d5e-48ca-ba3f-1e065e90a9cb
 
-# 调度服务任务创建URL
+# \u8c03\u5ea6\u670d\u52a1\u4efb\u52a1\u521b\u5efaURL
 task_submit_utl=http://esp-async-task.beta.web.sdp.101.com/concurrent/service/proxy/submit-execution
 
-# 打包接口：   asynpack异步   pack同步
+# \u6253\u5305\u63a5\u53e3\uff1a   asynpack\u5f02\u6b65   pack\u540c\u6b65
 sdp_cs_pack_api=/dentries/actions/asynpack
 
-#store sdk配置
+#store sdk\u914d\u7f6e
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://192.168.253.24:3306/lifecycle_pre?user=admin&password=admin&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 jdbc.username=admin
@@ -69,51 +69,51 @@ solr.collection=assets_debug
 log4jFilePath=logs
 hibernate.format_sql=false
 
-#课件转码优先级 referer|priority(0 1 2)
+#\u8bfe\u4ef6\u8f6c\u7801\u4f18\u5148\u7ea7 referer|priority(0 1 2)
 transcode_info=esp-lms-prepare.debug.web.nd|3,esp-class.debug.web.nd|3
 lc_domain_url=http://192.168.253.20:8080
 
-#课件转码模板地址
+#\u8bfe\u4ef6\u8f6c\u7801\u6a21\u677f\u5730\u5740
 ppt_template_path=qa_content_edu/esp/ppt2ndcw_template
-#教案转码模板地址
+#\u6559\u6848\u8f6c\u7801\u6a21\u677f\u5730\u5740
 doc_template_path=qa_content_edu/esp/doc_template
 
-#创建worker任务的默认分组
+#\u521b\u5efaworker\u4efb\u52a1\u7684\u9ed8\u8ba4\u5206\u7ec4
 worker_default_group_id=2
 
-#打包优先级
+#\u6253\u5305\u4f18\u5148\u7ea7
 packaging_priority=5
 
 
-#redis地址/端口
+#redis\u5730\u5740/\u7aef\u53e3
 redis_url=esp-lifecycle.edu.dev.redis.sdp
 redis_port=9389
 redis_index=6
 
-#连接池配置
+#\u8fde\u63a5\u6c60\u914d\u7f6e
 c3p0.main.initialPoolSize=5
 c3p0.main.maxPoolSize=10
 c3p0.main.minPoolSize=5
 
-#单元测试用户id（张磊userId）
+#\u5355\u5143\u6d4b\u8bd5\u7528\u6237id\uff08\u5f20\u78causerId\uff09
 junit.userId=2107181030
 
 
-#说明 add by @author lanyl
+#\u8bf4\u660e add by @author lanyl
 #====Start=====
-#esp 权限角色配置
-#超级管理员
+#esp \u6743\u9650\u89d2\u8272\u914d\u7f6e
+#\u8d85\u7ea7\u7ba1\u7406\u5458
 esp.super.admin = 136817
-#库管理员
+#\u5e93\u7ba1\u7406\u5458
 esp.coverage.admin = 136828
-#资源创建者角色
+#\u8d44\u6e90\u521b\u5efa\u8005\u89d2\u8272
 esp.res.creator = 126851
-#维度管理者角色
+#\u7ef4\u5ea6\u7ba1\u7406\u8005\u89d2\u8272
 esp.category.data.admin = 136822
-#资源消费者角色
+#\u8d44\u6e90\u6d88\u8d39\u8005\u89d2\u8272
 esp.res.consumer = 136823
-#游客角色
+#\u6e38\u5ba2\u89d2\u8272
 esp.guest = 126852
-#权限启用开关
+#\u6743\u9650\u542f\u7528\u5f00\u5173
 esp_authority_enable=false
 #====End===== 
