--- a/src/main/resources/config/props/db_titan_field_ndresource.properties
+++ b/src/main/resources/config/props/db_titan_field_ndresource.properties
@@ -33,3 +33,7 @@ eduLanguage=edu_language
 publisher=lc_publisher
 ndresCode=lc_ndres_code
 #primaryCategory=T.label
+hasRight=cr_has_right
+rightStartDate=cr_right_start_date
+rightEndDate=cr_right_end_date
+providerMode=cr_provider_mode
