--- a/src/main/resources/config/props/db_titan_field_ndresource.properties
+++ b/src/main/resources/config/props/db_titan_field_ndresource.properties
@@ -31,9 +31,9 @@ learningTime=edu_learning_time
 dbEduDescription=edu_description
 eduLanguage=edu_language
 publisher=lc_publisher
-ndresCode=lc_ndres_code
+ndresCode=ndres_code
 #primaryCategory=T.label
 hasRight=cr_has_right
 rightStartDate=cr_right_start_date
 rightEndDate=cr_right_end_date
-providerMode=cr_provider_mode
+providerMode=lc_provider_mode
