--- a/pom.xml
+++ b/pom.xml
@@ -291,7 +291,7 @@
 		<dependency>
 			<groupId>com.lcmq.component</groupId>
 			<artifactId>lc_msglist</artifactId>
-			<version>0.0.1</version>
+			<version>0.0.3-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
