--- a/src/main/resources/config/message/exception_message.properties
+++ b/src/main/resources/config/message/exception_message.properties
@@ -436,3 +436,10 @@ copyrightOwnerServiceImpl.updateCopyrightOwner.operation.fail=修改资源版权
 copyrightOwnerServiceImpl.deleteCopyrightOwner.operation.success=删除资源版权方成功
 copyrightOwnerServiceImpl.createCopyrightOwner.check.titleDuplicate.fail=资源版权方title不允许重复
 copyrightOwnerServiceImpl.updateCopyrightOwner.check.copyrightOwnerNotExist.fail=资源版权方未找到
+
+#库分享
+coverageSharingController.createCoverageSharing.check.coverage.fail=源或目标覆盖范围不能为空
+coverageSharingController.createCoverageSharing.coveragesharing.exist.fail=源和目标覆盖范围已经进行过分享
+coverageSharingServiceImpl.createCoverageSharing.operation.fail=创建库分享失败
+coverageSharingServiceImpl.deleteCoverageSharing.check.coverageSharingNotExist.fail=未找到对应库分享
+coverageSharingController.deleteCoverageSharing.operation.success=删除库分享成功
