--- a/src/main/filters/filter-development.properties
+++ b/src/main/filters/filter-development.properties
@@ -131,7 +131,9 @@ elasticsearch.cluster.name=cl-log-01
 elasticsearch.index.name=lcms_dev_nd_education_resource
 
 #titan configure
-titan.domain=192.168.11.139
+titan.domain=172.24.133.94
+titan.search.pool.size=100,100,48,48
+titan.single.pool.size=50,50,24,24
 
 #trace
 waf.trace.enabled=false
